Fixed dropdown cutoff issue by allowing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,6 @@ a {
 .content {
   padding: 0px 18px;
   display: block;
-  overflow: hidden;
 }
 
 .checkLabel {
